--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,9 @@
 <body>
   <h1>INDEX</h1>
 
-    HELLO WORLD_1_2
+    HELLO WORLD_1_2<br/>
+    HELLO WORLD_1_3<br/>
+    CICO TEST
+
 </body>
 </html>
